--- a/vignettes/pcaExplorer.Rmd
+++ b/vignettes/pcaExplorer.Rmd
@@ -172,9 +172,29 @@ The available panels are the described in the following subsections.
 
 Contains general information on `r Biocpkg("pcaExplorer")`.
 
+<p align="center">
+<img src="snap_about.png" style="width:800px;"/>
+</p>
+
+
 ## Instructions
 
 This is where you most likely are reading this text (otherwise in the package vignette).
+
+<p align="center">
+<img src="snap_instructions.png" style="width:800px;"/>
+</p>
+
+## Data Preview
+
+This panel displays information on the objects in use, either passed as parameters or 
+generated from the count matrix provided. It also displays its metadata in an interactive
+table, along with an overview of the number of reads assigned to features (in the typical
+use case, genes) for each sample in form of a barplot and summary statistics.
+
+<p align="center">
+<img src="snap_datapreview.png" style="width:800px;"/>
+</p>
 
 ## Samples View
 
@@ -183,6 +203,11 @@ a scree plot, a zoomed PCA plot, a plot of the genes with top and bottom loading
 presents a PCA plot where it is possible to remove samples deemed to be outliers in the analysis, which is 
 very useful to check the effect of excluding them.
 
+<p align="center">
+<img src="snap_pcasamples.png" style="width:800px;"/>
+</p>
+
+
 ## Genes View
 
 This panel displays the PCA projections of genes abundances onto any pair of components, with samples
@@ -190,11 +215,20 @@ as biplot variables, to identify interesting groups of genes. Zooming is also po
 genes, a boxplot is returned, grouped by the factors of interest. A static and an interactive heatmap are 
 provided, including the subset of selected genes. These are also reported in `datatable` objects.
 
+<p align="center">
+<img src="snap_pcagenes.png" style="width:800px;"/>
+</p>
+
+
 ## GeneFinder
 
 The user can search and display the expression values of a gene of interest, either by ID or gene
 name, as provided in the `annotation`. A handy panel for quick screening of shortlisted genes, again grouped by
 the factors of interest.
+
+<p align="center">
+<img src="snap_genefinder.png" style="width:800px;"/>
+</p>
 
 ## PCA2GO
 
@@ -202,6 +236,10 @@ This panel shows the functional annotation of the principal components, with GO 
 genes with high loadings on the selected principal components. It allows for the live computing of the object,
 that can otherwise provided as a parameter when launching the app. The panel displays a PCA plot for the 
 samples, surrounded on each side by the tables with the functions enriched in each component and direction.
+
+<p align="center">
+<img src="snap_pca2go.png" style="width:800px;"/>
+</p>
 
 ## Multifactor Exploration
 
@@ -220,6 +258,10 @@ tissue where the gene is mostly expressed varies throughout the conditions.
 This representation is under active development, and it is promising for identifying interesting sets or clusters of genes
 according to their behavior on the Principal Components subspaces. Zooming and exporting of the underlying genes is also
 allowed by brushing on the main plot.
+
+<p align="center">
+<img src="snap_multifac.png" style="width:800px;"/>
+</p>
 
 
 # `pcaExplorer` on published datasets
